fix sidebar z-index

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -52,7 +52,8 @@
 
     .logoContainer {
         cursor: pointer;
-height: 100%;
+        height: 100%;
+
         .logoMain {
             background-repeat: no-repeat;
             display: inline-block;
@@ -163,7 +164,8 @@ height: 100%;
 
 .minimizedFixedHeaderContainer {
     height: 62px;
-padding: 0;
+    padding: 0;
+
     .minimizedlogoMain {
         height: 100% !important;
         background-size: 32%;
@@ -188,7 +190,7 @@ padding: 0;
     align-items: center;
     padding: 0 10px;
     border-radius: 0px 0px 20px 20px;
-    z-index: 990;
+    z-index: 1001;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
 
     .logoContainer {
