--- a/src/components/supplierCard/SupplierCard.module.scss
+++ b/src/components/supplierCard/SupplierCard.module.scss
@@ -9,7 +9,7 @@
   position: relative;
 
   .favorIcon {
-    z-index: 999;
+    z-index: 800;
     border-radius: 50%;
     display: flex;
     align-items: center;
